<resources>
    <string name="app_name">Global Ocean Groups</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Change language</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="activity1"> Study Tour</string>
    <string name="activity2"> Travel in NZ</string>
    <string name="activity3"> Immigration</string>
    <string name="activity4"> Investment/Trading</string>
    <string name="eoi">EOI</string>
</resources>
