<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Main2Activity"
    tools:showIn="@layout/app_bar_main2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#626666"
            android:text="Services"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="50px"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/imgDemo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/contact"
            android:contextClickable="true"
            android:clickable="true"
           />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="70px"
          >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imgStudytour"
                    android:layout_width="154dp"
                    android:layout_height="133dp"
                    android:clickable="true"
                    app:srcCompat="@drawable/study"

                  />

                <ImageView
                    android:id="@+id/imgTravel"
                    android:layout_width="154dp"
                    android:layout_height="133dp"

                    android:clickable="true"
                    app:srcCompat="@drawable/travel" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/txtStudytour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity1"
                    android:textAlignment="center"
                    android:textSize="30px"
                    android:clickable="true"/>

                <TextView
                    android:id="@+id/txttravel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity2"
                    android:textAlignment="center"
                    android:textSize="30px"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imgImmigration"
                    android:layout_width="154dp"
                    android:layout_height="133dp"
                    android:clickable="true"
                    app:srcCompat="@drawable/nz" />

                <ImageView
                    android:id="@+id/imgInvestment"
                    android:layout_width="154dp"
                    android:layout_height="133dp"

                    android:clickable="true"
                    app:srcCompat="@drawable/invest" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/txtimmig"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity3"
                    android:textAlignment="center"
                    android:textSize="30px"/>

                <TextView
                    android:id="@+id/txtinvest"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/activity4"
                    android:textAlignment="center"
                    android:textSize="30px"/>
            </TableRow>







        </TableLayout>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="133dp"
            android:clickable="true"
            app:srcCompat="@drawable/eoi" />

        <TextView
            android:id="@+id/txteoi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eoi"
            android:textAlignment="center"
            android:textSize="40px"/>


        <TextView
            android:id="@+id/txtNews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#626666"
            android:text="News"
            android:textAlignment="center"
            android:textSize="50px"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />





    </LinearLayout>

</ScrollView>